--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "msnodesqlv8": "^5.1.1",
+    "mssql": "^12.1.0",
     "sequelize": "^6.37.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
