--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,19 +11,43 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@nestjs/apollo": "^13.2.1",
+    "@nestjs/common": "^11.1.8",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.8",
+    "@nestjs/graphql": "^13.2.0",
+    "@nestjs/jwt": "^11.0.1",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.1.8",
+    "@nestjs/typeorm": "^11.0.0",
     "@tanstack/react-query": "^5.90.2",
+    "apollo-server-express": "^3.13.0",
     "axios": "^1.12.2",
+    "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "graphql": "^16.12.0",
     "lucide-react": "^0.548.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
     "react-router-dom": "^7.9.3",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.27",
     "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/node": "^24.10.1",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
@@ -37,6 +61,8 @@
     "jsdom": "^27.0.0",
     "playwright": "^1.55.1",
     "prettier": "^3.6.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
     "vite": "npm:rolldown-vite@7.1.14",
     "vite-plugin-checker": "^0.11.0",
     "vitest": "^3.2.4"
