--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsx src/index.ts",
+    "dev": "tsx watch src/index.ts"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Warking07/educore.git"
+  },
+
+  "dependencies": {
+    "pg": "^8.x.x"
   },
   "keywords": [],
   "author": "",
